--- a/src/GUIexample.form
+++ b/src/GUIexample.form
@@ -51,18 +51,11 @@
                       </Group>
                       <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="currentYearInput" min="-2" pref="60" max="-2" attributes="0"/>
-                              <EmptySpace min="45" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="birthYearInput" min="-2" pref="60" max="-2" attributes="0"/>
-                              <EmptySpace min="16" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="currentYearInput" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
+                          <Component id="birthYearInput" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
